Using "Ctrl" to acquire snap target and left-click to confirm is broken since the sticky-keys commit #44275

Closed
opened 2015-04-05 17:52:08 +02:00 by emilian huminiuc · 10 comments

Blender Version
Broken: 53a3850
Worked: b444887

Short description of error:

Using "Ctrl" to acquire snap target, then left-clicking to confirm the operation causes an extra extrude to the click location, with a weird transform (afaiks undo seems to revert to the intended result).

Exact steps for others to reproduce the error:

Disable auto-snap and use "Ctrl" to acquire snap target for extrude or move operation.

Blender Version Broken: 53a3850 Worked: b444887 Short description of error: Using "Ctrl" to acquire snap target, then left-clicking to confirm the operation causes an extra extrude to the click location, with a weird transform (afaiks undo seems to revert to the intended result). Exact steps for others to reproduce the error: Disable auto-snap and use "Ctrl" to acquire snap target for extrude or move operation.

Changed status to: 'Open'

Changed status to: 'Open'
Julian Eisel was assigned by emilian huminiuc 2015-04-05 17:52:08 +02:00

Added subscriber: @emilian

Added subscriber: @emilian
Member

Yep I already know about this one and have a fix ready. Didn't commit yet as I'm still investigating if there's a better fix.

Yep I already know about this one and have a fix ready. Didn't commit yet as I'm still investigating if there's a better fix.

This issue was referenced by af23e8d44a

This issue was referenced by af23e8d44a6c70ce98a15d0aa2721c152c578dae
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit af23e8d44a.

Closed by commit af23e8d44a.

Thanks, That's fixed.

Now TAB won't work properly after the latest fixes. Need to set timeout >=1250 and hold TAB down for about 1s to be able to switch between object/edit mode, othwerways TAB is ignored.

Should I open a new bug for this?

Thanks, That's fixed. Now TAB won't work properly after the latest fixes. Need to set timeout >=1250 and hold TAB down for about 1s to be able to switch between object/edit mode, othwerways TAB is ignored. Should I open a new bug for this?
Member

Could you try if resetting to factory setting helps?

Could you try if resetting to factory setting helps?

Sorry, I forgot to mention that I had already tried reset to factory and it didn't help.

Sorry, I forgot to mention that I had already tried reset to factory and it didn't help.
Member

Hmm, that sounds pretty weird. And reporting doesn't really make sense since I can't recreate it. I'd say just wait 2 days and then we can check again, if this happens to others we'll get a report for sure.

Hmm, that sounds pretty weird. And reporting doesn't really make sense since I can't recreate it. I'd say just wait 2 days and then we can check again, if this happens to others we'll get a report for sure.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44275
No description provided.